removed unsupported garbage collector flag